--- a/app/src/main/res/layout/new_reminder.xml
+++ b/app/src/main/res/layout/new_reminder.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -55,52 +53,10 @@
 
     </com.google.android.material.textfield.TextInputLayout>
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/editIntervalTimeLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="4dp"
-        android:hint="@string/interval">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/editIntervalTime"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:inputType="numberSigned" />
-
-    </com.google.android.material.textfield.TextInputLayout>
-
-    <com.google.android.material.button.MaterialButtonToggleGroup
-        android:id="@+id/intervalUnit"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:checkedButton="@id/intervalHours"
-        app:selectionRequired="true"
-        app:singleSelection="true">
-
-        <Button
-            android:id="@+id/intervalMinutes"
-            style="?attr/materialButtonOutlinedStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/minutes" />
-
-        <Button
-            android:id="@+id/intervalHours"
-            style="?attr/materialButtonOutlinedStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/hours" />
-
-        <Button
-            android:id="@+id/intervalDays"
-            style="?attr/materialButtonOutlinedStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/days" />
-    </com.google.android.material.button.MaterialButtonToggleGroup>
+    <include layout="@layout/include_interval_settings" />
 
     <LinearLayout
+        style="?android:attr/buttonBarStyle"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="10dp"
@@ -108,21 +64,21 @@
 
         <Button
             android:id="@+id/cancelCreateReminder"
+            style="?android:attr/buttonBarButtonStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
             android:layout_weight="2"
-            android:text="@string/cancel"
-            tools:ignore="ButtonStyle" />
+            android:text="@string/cancel" />
 
         <Button
             android:id="@+id/createReminder"
+            style="?android:attr/buttonBarButtonStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
             android:layout_weight="1"
-            android:text="@string/create_reminder"
-            tools:ignore="ButtonStyle" />
+            android:text="@string/create_reminder" />
     </LinearLayout>
 
 </LinearLayout>
