--- a/app/src/main/res/layout/new_reminder.xml
+++ b/app/src/main/res/layout/new_reminder.xml
@@ -58,7 +58,7 @@
     <LinearLayout
         style="?android:attr/buttonBarStyle"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:orientation="horizontal">
 
