--- a/app/src/main/res/layout/fragment_next_reminder.xml
+++ b/app/src/main/res/layout/fragment_next_reminder.xml
@@ -10,6 +10,7 @@
     app:contentPadding="8dp">
 
     <LinearLayout
+        android:id="@+id/nextReminderCardLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
