--- a/app/src/main/res/layout-land/fragment_edit_medicine.xml
+++ b/app/src/main/res/layout-land/fragment_edit_medicine.xml
@@ -73,6 +73,15 @@
                     android:text="@string/select_color" />
             </LinearLayout>
 
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/openStockTracking"
+                style="?attr/materialIconButtonFilledStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="Stock tracking" />
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
