--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -123,4 +123,9 @@
         <item>30</item>
         <item>60</item>
     </string-array>
+    <string-array name="stock_reminder">
+        <item>@string/off</item>
+        <item>@string/once_below_threshold</item>
+        <item>@string/always_below_threshold</item>
+    </string-array>
 </resources>
