404 allow variable doses for medications (#431)
* Pin dependency version

* Add custom toolbar

* Implemented variable amount handling

* Layout tweak in advanced reminder settings

* Remove settings not valid in old SDKs

* Add menu for variable dosage

* Rename .java to .kt

* Finish implementation of variable dose

* Rename .java to .kt

* Better architecture of DialogHelper

* Adapt unit tests to database

* Add missing format string specifier

* Improve test reliability

* Improve test reliability

* Fix test on SDK 28

* Proper scrolling solution
Exception when button not found

* Bump barista version

* Allow flaky test

--- a/app/src/main/res/layout/fragment_advanced_reminder_settings.xml
+++ b/app/src/main/res/layout/fragment_advanced_reminder_settings.xml
@@ -48,6 +48,7 @@
             </RadioGroup>
 
             <LinearLayout
+                android:id="@+id/periodStartLayout"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="horizontal"
@@ -75,6 +76,7 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/periodEndLayout"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="horizontal">
@@ -99,6 +101,19 @@
                 </com.google.android.material.textfield.TextInputLayout>
 
             </LinearLayout>
+
+            <View
+                android:id="@+id/divider3"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_margin="4dp"
+                android:background="?android:attr/listDivider" />
+
+            <com.google.android.material.materialswitch.MaterialSwitch
+                android:id="@+id/variableAmount"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/variable_amount" />
 
             <View
                 android:id="@+id/divider"
@@ -188,8 +203,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:inputType="textMultiLine"
-                    android:lineBreakStyle="normal"
-                    android:lineBreakWordStyle="phrase"
                     android:lines="2"
                     android:singleLine="false"
                     tools:ignore="TextContrastCheck" />
