Custom snooze implementation

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -62,6 +62,7 @@
         <item>@string/minutes_15</item>
         <item>@string/minutes_30</item>
         <item>@string/minutes_60</item>
+        <item>@string/custom</item>
     </string-array>
     <string-array name="snooze_duration_values">
         <item>5</item>
@@ -69,6 +70,7 @@
         <item>15</item>
         <item>30</item>
         <item>60</item>
+        <item>-1</item>
     </string-array>
     <string-array name="days">
         <item>@string/monday</item>
