--- a/app/src/main/res/layout/dialog_fragment_tags.xml
+++ b/app/src/main/res/layout/dialog_fragment_tags.xml
@@ -13,7 +13,7 @@
     </androidx.recyclerview.widget.RecyclerView>
 
     <Button
-        android:id="@+id/close"
+        android:id="@+id/ok"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="end"
