--- a/app/src/main/res/layout/dialog_fragment_tags.xml
+++ b/app/src/main/res/layout/dialog_fragment_tags.xml
@@ -1,37 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:padding="8dp">
-
-    <LinearLayout
-        android:id="@+id/addTagLayout"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:padding="8dp">
-
-        <EditText
-            android:id="@+id/addTagName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:autofillHints="ignore"
-            android:ems="10"
-            android:inputType="text"
-            android:minHeight="48dp"
-            android:text="@string/name" />
-
-        <Button
-            android:id="@+id/addTag"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:labelFor="@id/addTagName"
-            android:minHeight="48dp"
-            android:text="@string/add_tag"
-            app:icon="@drawable/tag" />
-    </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/tags"
@@ -42,10 +15,31 @@
 
     </androidx.recyclerview.widget.RecyclerView>
 
-    <Button
-        android:id="@+id/ok"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="end"
-        android:text="@android:string/ok" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        android:padding="8dp">
+
+        <Button
+            android:id="@+id/addTag"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:minHeight="48dp"
+            android:text="@string/add_tag"
+            app:icon="@drawable/tag" />
+
+        <Space
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1" />
+
+        <Button
+            android:id="@+id/ok"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:text="@android:string/ok" />
+    </LinearLayout>
+
 </LinearLayout>
