--- a/app/src/main/res/layout/card_medicine.xml
+++ b/app/src/main/res/layout/card_medicine.xml
@@ -24,6 +24,7 @@
             app:layout_constraintDimensionRatio="w,1:1"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintWidth_max="48dp"
             app:srcCompat="@drawable/capsule" />
 
         <LinearLayout
@@ -49,6 +50,11 @@
                 android:id="@+id/remindersSummary"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/tags"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
 
         </LinearLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
