--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -1,4 +1,11 @@
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <item
+        android:id="@+id/tag_filter"
+        android:icon="@drawable/tag"
+        android:title="@string/filter"
+        app:showAsAction="always"/>
 
     <group android:id="@+id/settings_group">
         <item
