--- a/app/src/main/res/layout/card_medicine.xml
+++ b/app/src/main/res/layout/card_medicine.xml
@@ -54,7 +54,8 @@
             <com.google.android.flexbox.FlexboxLayout
                 android:id="@+id/tags"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="4dp" />
 
         </LinearLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
