--- a/app/src/main/res/layout-land/fragment_overview.xml
+++ b/app/src/main/res/layout-land/fragment_overview.xml
@@ -1,24 +1,75 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_margin="0dp"
-    android:orientation="horizontal"
-    tools:context=".overview.OverviewFragment">
+    android:layout_height="match_parent">
 
     <LinearLayout
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:orientation="vertical">
+        android:layout_margin="0dp"
+        android:orientation="horizontal"
+        tools:context=".overview.OverviewFragment">
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="vertical">
+
+            <com.google.android.material.card.MaterialCardView
+                android:id="@+id/nextRemindersCard"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_margin="8dp"
+                app:cardCornerRadius="10dp"
+                app:cardElevation="2dp"
+                app:contentPadding="10dp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/nextRemindersText"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/next_reminders"
+                        android:textStyle="bold"
+                        app:layout_constraintBottom_toTopOf="@+id/nextReminders"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/nextReminders"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:scrollbars="vertical" />
+
+                    <Button
+                        android:id="@+id/expandNextReminders"
+                        style="?attr/materialIconButtonFilledTonalStyle"
+                        android:layout_width="0dp"
+                        android:layout_height="48dp"
+                        android:contentDescription="@string/show_all"
+                        app:icon="@drawable/chevron_down"
+                        app:iconGravity="textStart"
+                        tools:ignore="TouchTargetSizeCheck" />
+
+                </LinearLayout>
+
+            </com.google.android.material.card.MaterialCardView>
+
+        </LinearLayout>
 
         <com.google.android.material.card.MaterialCardView
-            android:id="@+id/nextRemindersCard"
-            android:layout_width="match_parent"
+            android:id="@+id/latestRemindersCard"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_margin="8dp"
+            android:layout_weight="1"
             app:cardCornerRadius="10dp"
             app:cardElevation="2dp"
             app:contentPadding="10dp">
@@ -28,106 +79,66 @@
                 android:layout_height="match_parent"
                 android:orientation="vertical">
 
-                <TextView
-                    android:id="@+id/nextRemindersText"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/next_reminders"
-                    android:textStyle="bold"
-                    app:layout_constraintBottom_toTopOf="@+id/nextReminders"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/nextReminders"
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:scrollbars="vertical" />
+                    android:orientation="horizontal"
+                    android:paddingBottom="4dp">
 
-                <Button
-                    android:id="@+id/expandNextReminders"
-                    style="?attr/materialIconButtonFilledTonalStyle"
-                    android:layout_width="0dp"
-                    android:layout_height="48dp"
-                    android:contentDescription="@string/show_all"
-                    app:icon="@drawable/chevron_down"
-                    app:iconGravity="textStart"
-                    tools:ignore="TouchTargetSizeCheck" />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/recent_events"
+                        android:textStyle="bold" />
+
+                    <Space
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1" />
+
+                    <com.google.android.material.chip.ChipGroup
+                        android:id="@+id/recentFilters"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content">
+
+                        <com.google.android.material.chip.Chip
+                            android:id="@+id/showOnlyOpen"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:checkable="true"
+                            android:checked="false"
+                            android:text="@string/show_only_open"
+                            app:checkedIcon="@drawable/funnel"
+                            app:checkedIconVisible="true"
+                            app:chipMinTouchTargetSize="0dp" />
+
+                    </com.google.android.material.chip.ChipGroup>
+                </LinearLayout>
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/latestReminders"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:clipToPadding="false"
+                    android:contentDescription="@string/recent_events"
+                    android:paddingBottom="60dp"
+                    android:scrollbars="vertical" />
 
             </LinearLayout>
 
         </com.google.android.material.card.MaterialCardView>
-
-        <Button
-            android:id="@+id/logManualDose"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="5dp"
-            android:layout_marginEnd="5dp"
-            android:text="@string/log_additional_dose"
-            app:icon="@drawable/capsule" />
-
     </LinearLayout>
 
-    <com.google.android.material.card.MaterialCardView
-        android:id="@+id/latestRemindersCard"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_margin="8dp"
-        android:layout_weight="1"
-        app:cardCornerRadius="10dp"
-        app:cardElevation="2dp"
-        app:contentPadding="10dp">
+    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
+        android:id="@+id/logManualDose"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="4dp"
+        android:layout_marginBottom="4dp"
+        android:clickable="true"
+        android:contentDescription="@string/log_additional_dose"
+        android:text="@string/log_additional_dose"
+        app:icon="@drawable/capsule" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:paddingBottom="4dp">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/recent_events"
-                    android:textStyle="bold" />
-
-                <Space
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1" />
-
-                <com.google.android.material.chip.ChipGroup
-                    android:id="@+id/recentFilters"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content">
-
-                    <com.google.android.material.chip.Chip
-                        android:id="@+id/showOnlyOpen"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:checkable="true"
-                        android:checked="false"
-                        android:text="@string/show_only_open"
-                        app:checkedIcon="@drawable/funnel"
-                        app:checkedIconVisible="true"
-                        app:chipMinTouchTargetSize="0dp" />
-
-                </com.google.android.material.chip.ChipGroup>
-            </LinearLayout>
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/latestReminders"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:contentDescription="@string/recent_events"
-                android:scrollbars="vertical" />
-
-        </LinearLayout>
-
-    </com.google.android.material.card.MaterialCardView>
-</LinearLayout>
+</FrameLayout>
